# serializer version: 1
# name: test_by_city[failing_klundert]
  dict({
    'air_quality_index': None,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 51.6689355,
        'longitude': 4.541659,
      }),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 71.6,
      'nephelometry': None,
      'nitrogen_dioxide': 1.6,
      'nitrogen_dioxide_concentration': 2,
      'ozone': None,
      'ozone_concentration': None,
      'pm10': 4,
      'pm10_concentration': 4,
      'pm25': None,
      'pm25_concentration': None,
      'pressure': 1018,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 18, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_by_city[klundert]
  dict({
    'air_quality_index': 4,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 51.6689355,
        'longitude': 4.541659,
      }),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 71.6,
      'nephelometry': None,
      'nitrogen_dioxide': 1.6,
      'nitrogen_dioxide_concentration': 2,
      'ozone': None,
      'ozone_concentration': None,
      'pm10': 4,
      'pm10_concentration': 4,
      'pm25': None,
      'pm25_concentration': None,
      'pressure': 1018,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 18, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_by_city[maarssen]
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 52.20153,
        'longitude': 4.987444,
      }),
      'external_url': 'https://aqicn.org/city/netherland/breukelen/snelweg',
      'location': None,
      'name': 'Snelweg, Breukelen',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 77.5,
      'nephelometry': None,
      'nitrogen_dioxide': 3.9,
      'nitrogen_dioxide_concentration': 4,
      'ozone': 29.2,
      'ozone_concentration': 32,
      'pm10': 12,
      'pm10_concentration': 13,
      'pm25': 7,
      'pm25_concentration': 1.3,
      'pressure': 1008.4,
      'sulfur_dioxide': None,
      'temperature': 16.9,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 18, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 4586,
  })
# ---
# name: test_by_city[olivias]
  dict({
    'air_quality_index': 8,
    'attributions': list([
      dict({
        'logo': 'portugal-qualar.png',
        'name': 'Portugal -Agencia Portuguesa do Ambiente - Qualidade do Ar',
        'url': 'http://qualar.apambiente.pt/',
      }),
      dict({
        'logo': 'Europe-EEA.png',
        'name': 'European Environment Agency',
        'url': 'http://www.eea.europa.eu/themes/air/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 38.768888888889,
        'longitude': -9.1080555555556,
      }),
      'external_url': 'https://aqicn.org/city/portugal/lisboa/olivais',
      'location': None,
      'name': 'Olivais, Lisboa, Portugal',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 78,
      'nephelometry': None,
      'nitrogen_dioxide': 29.7,
      'nitrogen_dioxide_concentration': 31,
      'ozone': 7.8,
      'ozone_concentration': 8,
      'pm10': 27,
      'pm10_concentration': 29,
      'pm25': 51,
      'pm25_concentration': 9.1,
      'pressure': 1021,
      'sulfur_dioxide': 2.5,
      'temperature': 22,
    }),
    'measured_at': datetime.datetime(2023, 10, 2, 8, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=3600))),
    'station_id': 10513,
  })
# ---
# name: test_by_city[utrecht]
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 52.101308,
        'longitude': 5.128183,
      }),
      'external_url': 'https://aqicn.org/city/netherland/utrecht/griftpark',
      'location': None,
      'name': 'Griftpark, Utrecht',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 73.2,
      'nephelometry': None,
      'nitrogen_dioxide': 0.7,
      'nitrogen_dioxide_concentration': 1,
      'ozone': 29.4,
      'ozone_concentration': 32,
      'pm10': 12,
      'pm10_concentration': 13,
      'pm25': 1,
      'pm25_concentration': 0.2,
      'pressure': 1008.8,
      'sulfur_dioxide': 0.1,
      'temperature': 17.5,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 17, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6332,
  })
# ---
# name: test_get_by_coordinates
  dict({
    'air_quality_index': 29,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 52.105031,
        'longitude': 5.124464,
      }),
      'external_url': 'https://aqicn.org/city/netherland/utrecht/de-jongweg',
      'location': None,
      'name': 'de Jongweg, Utrecht',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 80,
      'nephelometry': None,
      'nitrogen_dioxide': 2.3,
      'nitrogen_dioxide_concentration': 2,
      'ozone': 29.4,
      'ozone_concentration': 32,
      'pm10': 12,
      'pm10_concentration': 13,
      'pm25': 17,
      'pm25_concentration': 3.1,
      'pressure': 1008.8,
      'sulfur_dioxide': None,
      'temperature': 16,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 17, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 4584,
  })
# ---
# name: test_get_by_ip
  dict({
    'air_quality_index': 26,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 52.3702157,
        'longitude': 4.8951679,
      }),
      'external_url': 'https://aqicn.org/city/amsterdam',
      'location': None,
      'name': 'Amsterdam',
    }),
    'dominant_pollutant': <Pollutant.OZONE: 'o3'>,
    'extended_air_quality': dict({
      'carbon_monoxide': 2.3,
      'carbon_monoxide_concentration': 0.2,
      'humidity': 69.5,
      'nephelometry': None,
      'nitrogen_dioxide': 0.7,
      'nitrogen_dioxide_concentration': 1,
      'ozone': 26.4,
      'ozone_concentration': 29,
      'pm10': 9,
      'pm10_concentration': 10,
      'pm25': 15,
      'pm25_concentration': 2.7,
      'pressure': 1016.4,
      'sulfur_dioxide': 0.2,
      'temperature': 17.5,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 17, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 5771,
  })
# ---
# name: test_get_by_name[failing_klundert]
  dict({
    'air_quality_index': None,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 51.6689355,
        'longitude': 4.541659,
      }),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 71.6,
      'nephelometry': None,
      'nitrogen_dioxide': 2,
      'nitrogen_dioxide_concentration': 2,
      'ozone': None,
      'ozone_concentration': None,
      'pm10': 5,
      'pm10_concentration': 5,
      'pm25': None,
      'pm25_concentration': None,
      'pressure': 1018,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 19, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_get_by_name[klundert]
  dict({
    'air_quality_index': 5,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 51.6689355,
        'longitude': 4.541659,
      }),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 71.6,
      'nephelometry': None,
      'nitrogen_dioxide': 2,
      'nitrogen_dioxide_concentration': 2,
      'ozone': None,
      'ozone_concentration': None,
      'pm10': 5,
      'pm10_concentration': 5,
      'pm25': None,
      'pm25_concentration': None,
      'pressure': 1018,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 19, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_get_by_station_number[10142]
  dict({
    'air_quality_index': 23,
    'attributions': list([
      dict({
        'logo': 'Australia-NSW.png',
        'name': 'Office of Environment and Heritage - NSW',
        'url': 'https://www.environment.nsw.gov.au/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': -33.765278,
        'longitude': 151.13579,
      }),
      'external_url': 'https://aqicn.org/city/australia/nsw/macquarie-park/sydney-east',
      'location': None,
      'name': 'Macquarie Park Sydney East',
    }),
    'dominant_pollutant': <Pollutant.NEPHELOMETRY: 'neph'>,
    'extended_air_quality': dict({
      'carbon_monoxide': 1.2,
      'carbon_monoxide_concentration': 0.1,
      'humidity': 48.3,
      'nephelometry': 2,
      'nitrogen_dioxide': 1,
      'nitrogen_dioxide_concentration': 1,
      'ozone': 23.3,
      'ozone_concentration': 25,
      'pm10': 11,
      'pm10_concentration': 12,
      'pm25': 2,
      'pm25_concentration': 0.4,
      'pressure': 1027,
      'sulfur_dioxide': 1.5,
      'temperature': 18.7,
    }),
    'measured_at': datetime.datetime(2023, 10, 18, 17, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=39600))),
    'station_id': 10142,
  })
# ---
# name: test_get_by_station_number[372382]
  dict({
    'air_quality_index': 155,
    'attributions': list([
      dict({
        'logo': None,
        'name': 'Purple Air',
        'url': 'https://www.purpleair.com/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 47.616673,
        'longitude': -122.33384,
      }),
      'external_url': 'https://aqicn.org/station/@372382',
      'location': 'Terry Avenue, Belltown, Seattle, King County, Washington, 98101, USA',
      'name': 'Building Cure',
    }),
    'dominant_pollutant': <Pollutant.PM25: 'pm25'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 38,
      'nephelometry': None,
      'nitrogen_dioxide': None,
      'nitrogen_dioxide_concentration': None,
      'ozone': None,
      'ozone_concentration': None,
      'pm10': 59,
      'pm10_concentration': 71,
      'pm25': 155,
      'pm25_concentration': 61.2,
      'pressure': None,
      'sulfur_dioxide': None,
      'temperature': 25.5,
    }),
    'measured_at': datetime.datetime(2023, 8, 20, 19, 20, 22, tzinfo=datetime.timezone.utc),
    'station_id': -372382,
  })
# ---
# name: test_get_by_station_number[6337]
  dict({
    'air_quality_index': 5,
    'attributions': list([
      dict({
        'logo': 'Netherland-RIVM.png',
        'name': 'RIVM - Rijksinstituut voor Volksgezondheid en Milieum, Landelijk Meetnet Luchtkwaliteit',
        'url': 'http://www.luchtmeetnet.nl/',
      }),
      dict({
        'logo': None,
        'name': 'Provincie Noord Brabant',
        'url': 'http://www.brabantluchtmeet.net/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 51.6689355,
        'longitude': 4.541659,
      }),
      'external_url': 'https://aqicn.org/city/netherland/brabant/klundert',
      'location': None,
      'name': 'Klundert, Brabant',
    }),
    'dominant_pollutant': <Pollutant.PM10: 'pm10'>,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 71.6,
      'nephelometry': None,
      'nitrogen_dioxide': 2,
      'nitrogen_dioxide_concentration': 2,
      'ozone': None,
      'ozone_concentration': None,
      'pm10': 5,
      'pm10_concentration': 5,
      'pm25': None,
      'pm25_concentration': None,
      'pressure': 1018,
      'sulfur_dioxide': None,
      'temperature': 18.1,
    }),
    'measured_at': datetime.datetime(2023, 8, 7, 19, 0, tzinfo=datetime.timezone(datetime.timedelta(seconds=7200))),
    'station_id': 6337,
  })
# ---
# name: test_get_by_station_number[10002]
  dict({
    'air_quality_index': None,
    'attributions': list([
      dict({
        'logo': 'Finland-ilmanlaatu.png',
        'name': 'Ilmanlaatu - Air Quality in finland',
        'url': 'http://www.ilmanlaatu.fi/',
      }),
      dict({
        'logo': None,
        'name': 'World Air Quality Index Project',
        'url': 'https://waqi.info/',
      }),
    ]),
    'city': dict({
      'coordinates': dict({
        'latitude': 60.93642,
        'longitude': 25.96135,
      }),
      'external_url': 'https://aqicn.org/city/finland/nastola/rakokiventie-siirrettava',
      'location': None,
      'name': 'Rakokiventie siirrettävä, Nastola, Finland',
    }),
    'dominant_pollutant': None,
    'extended_air_quality': dict({
      'carbon_monoxide': None,
      'carbon_monoxide_concentration': None,
      'humidity': 93,
      'nephelometry': None,
      'nitrogen_dioxide': None,
      'nitrogen_dioxide_concentration': None,
      'ozone': None,
      'ozone_concentration': None,
      'pm10': None,
      'pm10_concentration': None,
      'pm25': None,
      'pm25_concentration': None,
      'pressure': 1025,
      'sulfur_dioxide': None,
      'temperature': 5,
    }),
    'measured_at': None,
    'station_id': 10002,
  })
# ---
# name: test_search[failing_klundert]
  list([
    dict({
      'air_quality_index': None,
      'station': dict({
        'coordinates': dict({
          'latitude': 51.6689355,
          'longitude': 4.541659,
        }),
        'external_url': 'netherland/brabant/klundert',
        'name': 'Klundert, Brabant',
      }),
      'station_id': 6337,
    }),
  ])
# ---
# name: test_search[klundert]
  list([
    dict({
      'air_quality_index': 4,
      'station': dict({
        'coordinates': dict({
          'latitude': 51.6689355,
          'longitude': 4.541659,
        }),
        'external_url': 'netherland/brabant/klundert',
        'name': 'Klundert, Brabant',
      }),
      'station_id': 6337,
    }),
  ])
# ---
# name: test_search[unknown]
  list([
  ])
# ---
